src/tests/typing/fail/diff_bus_size.tj
module main() = (b)
    shared b = ()
    automaton
        node n 
            b = [1; 5]
        transition